align__item--fixed - has responsive sizings

--- a/app/assets/stylesheets/components.form.scss
+++ b/app/assets/stylesheets/components.form.scss
@@ -9,7 +9,7 @@
 //  - fill up entire row
 //
 .form__row {
-  width: 100%;
+  width: 96%;
 }
 
 //
